--- a/packages/nightingale-app-react-native/package.json
+++ b/packages/nightingale-app-react-native/package.json
@@ -35,6 +35,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
+      "type": "./dist/definitions/index.d.ts",
       "browser": {
         "browser:modern": {
           "import": "./dist/index-browsermodern.es.js"
