--- a/packages/nightingale-markdown-formatter/package.json
+++ b/packages/nightingale-markdown-formatter/package.json
@@ -34,6 +34,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
+      "type": "./dist/definitions/index.d.ts",
       "node": {
         "import": "./dist/index-node18.mjs"
       },
