--- a/packages/nightingale-browser-console-formatter/package.json
+++ b/packages/nightingale-browser-console-formatter/package.json
@@ -34,7 +34,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "type": "./dist/definitions/index.d.ts",
+      "types": "./dist/definitions/index.d.ts",
       "node": {
         "import": "./dist/index-node18.mjs"
       },
