--- a/packages/nightingale-level-names/package.json
+++ b/packages/nightingale-level-names/package.json
@@ -21,6 +21,7 @@
   "types": "./lib/index.d.ts",
   "exports": {
     ".": {
+      "types": "./lib/index.d.ts",
       "import": "./lib/index.js",
       "require": "./lib/index.cjs"
     },
