--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@babel/core": "7.22.15",
     "@types/node": "18.17.14",
-    "@types/node-fetch": "2.6.4",
+    "@types/whatwg-fetch": "0.0.33",
     "pob-babel": "36.3.0",
     "typescript": "5.2.2"
   }
