chore: remove lerna config and update package.json version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nightingale-monorepo",
   "private": true,
-  "version": "0.0.0",
+  "version": "14.1.0",
   "description": "Logger for browser and node, see [nightingale](packages/nightingale) to get started !",
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (https://christophe.hurpeau.com)",
   "license": "ISC",
@@ -31,8 +31,7 @@
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json --coverageReporters=text",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "tsc": "tsc -b",
-    "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch",
-    "watch:lerna": "lerna run --parallel --ignore \"*-example\" watch"
+    "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "prettier": "@pob/root/prettier-config",
   "commitlint": {
