--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "repository": "https://github.com/christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
   "type": "module",
+  "packageManager": "yarn@4.0.2",
   "engines": {
     "node": ">=18.12.0"
   },
-  "packageManager": "yarn@4.0.2",
   "workspaces": [
     "packages/*"
   ],
@@ -29,28 +29,30 @@
     "postinstall": "pob-root-postinstall",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json --coverageReporters=text",
+    "test:coverage:json": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json",
+    "test:coverage:lcov": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=lcov",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "tsc": "tsc -b",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
-  "prettier": "@pob/root/prettier-config",
   "commitlint": {
     "extends": [
       "@pob/commitlint-config"
     ]
   },
+  "prettier": "@pob/root/prettier-config",
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@pob/commitlint-config": "6.3.1",
     "@pob/eslint-config": "53.0.0",
     "@pob/eslint-config-typescript": "53.1.0",
-    "@pob/root": "8.12.0",
+    "@pob/root": "9.1.0",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.6",
     "check-package-dependencies": "7.0.0",
     "eslint": "8.56.0",
     "jest": "29.7.0",
-    "pob-babel": "38.0.1",
+    "pob-babel": "38.0.2",
     "typedoc": "0.25.4",
     "typescript": "5.3.3"
   }
