--- a/packages/nightingale-example/tsconfig.json
+++ b/packages/nightingale-example/tsconfig.json
@@ -12,6 +12,8 @@
     "incremental": true,
     "composite": true,
 
+    "resolveJsonModule": true,
+
     "paths": {
       "nightingale-types": ["../../packages/nightingale-types/src"],
       "nightingale-types/*": ["../../packages/nightingale-types/src/*"],
