--- a/packages/nightingale-string/src/.eslintrc.json
+++ b/packages/nightingale-string/src/.eslintrc.json
@@ -2,6 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "EXPERIMENTAL_useProjectService": true,
     "project": "packages/nightingale-string/tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
