--- a/packages/nightingale-raw-formatter/src/.eslintrc.json
+++ b/packages/nightingale-raw-formatter/src/.eslintrc.json
@@ -5,10 +5,7 @@
     "project": "packages/nightingale-raw-formatter/tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "@pob/eslint-config-typescript",
-    "@pob/eslint-config-typescript/node"
-  ],
+  "extends": ["@pob/eslint-config-typescript"],
   "ignorePatterns": ["*.d.ts"],
   "overrides": [
     {
