--- a/packages/nightingale-browser-console/package.json
+++ b/packages/nightingale-browser-console/package.json
@@ -54,13 +54,14 @@
     ]
   },
   "pob": {
-    "babelEnvs": [
+    "bundler": "rollup-babel",
+    "entries": [
+      "index"
+    ],
+    "envs": [
       {
         "target": "browser"
       }
-    ],
-    "entries": [
-      "index"
     ]
   },
   "prettier": "@pob/root/prettier-config",
@@ -73,7 +74,7 @@
   "devDependencies": {
     "@babel/core": "7.24.5",
     "@babel/preset-env": "7.24.5",
-    "pob-babel": "38.1.3",
+    "pob-babel": "39.0.0",
     "typescript": "5.4.5"
   }
 }
