--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -46,17 +46,18 @@
     "watch": "pob-watch"
   },
   "pob": {
-    "babelEnvs": [
+    "bundler": "rollup-babel",
+    "entries": [
+      "index",
+      "children",
+      "sentry"
+    ],
+    "envs": [
       {
         "target": "node",
         "version": "20",
         "omitVersionInFileName": true
       }
-    ],
-    "entries": [
-      "index",
-      "children",
-      "sentry"
     ]
   },
   "prettier": "@pob/root/prettier-config",
@@ -68,7 +69,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
-    "pob-babel": "38.1.3",
+    "pob-babel": "39.0.0",
     "typescript": "5.4.5"
   }
 }
