--- a/packages/nightingale-react-native-console/package.json
+++ b/packages/nightingale-react-native-console/package.json
@@ -56,13 +56,14 @@
     ]
   },
   "pob": {
-    "babelEnvs": [
+    "bundler": "rollup-babel",
+    "entries": [
+      "index"
+    ],
+    "envs": [
       {
         "target": "browser"
       }
-    ],
-    "entries": [
-      "index"
     ]
   },
   "prettier": "@pob/root/prettier-config",
@@ -76,7 +77,7 @@
   "devDependencies": {
     "@babel/core": "7.24.5",
     "@babel/preset-env": "7.24.5",
-    "pob-babel": "38.1.3",
+    "pob-babel": "39.0.0",
     "react": "18.3.0",
     "react-native": "0.72.6",
     "typescript": "5.4.5"
