--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -45,14 +45,15 @@
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "pob": {
-    "babelEnvs": [
+    "bundler": "rollup-babel",
+    "entries": [
+      "index"
+    ],
+    "envs": [
       {
         "target": "node",
         "version": "18"
       }
-    ],
-    "entries": [
-      "index"
     ]
   },
   "prettier": "@pob/root/prettier-config",
@@ -65,7 +66,7 @@
   "devDependencies": {
     "@babel/core": "7.24.5",
     "@types/node": "20.14.2",
-    "pob-babel": "38.1.3",
+    "pob-babel": "39.0.0",
     "typescript": "5.4.5"
   }
 }
