--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -58,7 +58,11 @@
     ]
   },
   "pob": {
-    "babelEnvs": [
+    "bundler": "rollup-babel",
+    "entries": [
+      "index"
+    ],
+    "envs": [
       {
         "target": "node",
         "version": "18"
@@ -66,9 +70,6 @@
       {
         "target": "browser"
       }
-    ],
-    "entries": [
-      "index"
     ]
   },
   "prettier": "@pob/root/prettier-config",
@@ -82,7 +83,7 @@
     "@babel/core": "7.24.5",
     "@babel/preset-env": "7.24.5",
     "nightingale-string": "15.0.0",
-    "pob-babel": "38.1.3",
+    "pob-babel": "39.0.0",
     "typescript": "5.4.5"
   }
 }
