--- a/packages/nightingale/src/.eslintrc.json
+++ b/packages/nightingale/src/.eslintrc.json
@@ -5,10 +5,7 @@
     "project": "packages/nightingale/tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "@pob/eslint-config-typescript",
-    "@pob/eslint-config-typescript/node"
-  ],
+  "extends": ["@pob/eslint-config-typescript"],
   "ignorePatterns": ["*.d.ts"],
   "rules": {
     "@typescript-eslint/max-params": "warn"
