--- a/packages/nightingale-example/package.json
+++ b/packages/nightingale-example/package.json
@@ -66,6 +66,7 @@
     "bundler": "rollup-babel",
     "entries": [
       "configure",
+      "cli",
       "console",
       "debug",
       "errors",
