feat: add LoggerCLIString and noColor option

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "lint:prettier": "pob-root-prettier --check .",
     "lint:prettier:fix": "pob-root-prettier --write .",
     "postinstall": "pob-root-postinstall",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json --coverageReporters=text",
-    "test:coverage:json": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json",
-    "test:coverage:lcov": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=lcov",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test": "TZ=UTC NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:coverage": "TZ=UTC NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json --coverageReporters=text",
+    "test:coverage:json": "TZ=UTC NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=json",
+    "test:coverage:lcov": "TZ=UTC NODE_OPTIONS=--experimental-vm-modules jest --coverage --coverageReporters=lcov",
+    "test:watch": "TZ=UTC NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "tsc": "tsc -b",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
