--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -27,6 +27,9 @@
       "node": {
         "import": "./dist/index-node20.mjs"
       },
+      "react-native": {
+        "import": "./dist/index-browser.es.js"
+      },
       "browser": {
         "import": "./dist/index-browser.es.js"
       }
