--- a/packages/nightingale-react-native-console/package.json
+++ b/packages/nightingale-react-native-console/package.json
@@ -28,6 +28,9 @@
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/definitions/index.d.ts",
+      "react-native": {
+        "import": "./dist/index-browser.es.js"
+      },
       "browser": {
         "import": "./dist/index-browser.es.js"
       }
