--- a/packages/nightingale-web-processor/package.json
+++ b/packages/nightingale-web-processor/package.json
@@ -19,14 +19,14 @@
     "node": ">=22.18.0"
   },
   "sideEffects": false,
-  "main": "./dist/index-node22.mjs",
+  "main": "./dist/index-node.mjs",
   "types": "./dist/definitions/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/definitions/index.d.ts",
       "node": {
-        "import": "./dist/index-node22.mjs"
+        "import": "./dist/index-node.mjs"
       }
     }
   },
@@ -63,7 +63,7 @@
     "nightingale-types": "17.0.0"
   },
   "devDependencies": {
-    "@pob/rollup-esbuild": "7.3.0",
+    "@pob/rollup-esbuild": "7.3.2",
     "typescript": "5.9.3"
   }
 }
