--- a/packages/nightingale-string/src/.eslintrc.json
+++ b/packages/nightingale-string/src/.eslintrc.json
@@ -13,10 +13,7 @@
   "overrides": [
     {
       "files": ["**/*.test.ts", "__tests__/**/*.ts", "**/__mocks__/**/*.ts"],
-      "extends": ["@pob/eslint-config-typescript/test"],
-      "env": {
-        "jest": true
-      }
+      "extends": ["@pob/eslint-config-typescript/test"]
     }
   ]
 }
