--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn typedoc --tsconfig tsconfig.doc.json
 
       - name: Generate Coverage
-        run: yarn test:coverage:json --coverageDirectory=docs/coverage/
+        run: yarn test:coverage:json
 
       - name: Create nojekyll
         run: touch docs/.nojekyll
