--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -8,6 +8,7 @@
     "monorepo": {
       "ci": true,
       "testing": true,
+      "testRunner": "vitest",
       "codecov": true,
       "documentation": true,
       "typescript": true,
