--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,10 @@
 defaultSemverRangePrefix: ^
-
 enableGlobalCache: true
-
 nodeLinker: node-modules
+npmMinimalAgeGate: 4320
+npmPreapprovedPackages:
+  - "@pob/*"
+  - alouette
+  - alouette-icons
+  - nightingale
+  - nightingale-logger
