--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -40,8 +40,8 @@
     "clean": "yarn clean:build",
     "clean:build": "pob-esbuild-clean-out dist",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-slack",
-    "test": "yarn ../../ run test -- packages/nightingale-slack",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-slack'",
+    "test": "yarn '../..' run test -- 'packages/nightingale-slack'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "pob": {
