--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ jobs:
   create-documentation-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
 
       - name: Enable Corepack
         run: corepack enable
@@ -28,7 +28,7 @@ jobs:
         run: yarn typedoc --tsconfig tsconfig.doc.json
 
       - name: Generate Coverage
-        run: yarn test:coverage:json
+        run: yarn run test:coverage:json
 
       - name: Create nojekyll
         run: touch docs/.nojekyll
