--- a/.github/workflows/push-renovate-pob_root.yml
+++ b/.github/workflows/push-renovate-pob_root.yml
@@ -7,13 +7,16 @@ on:
       - "renovate/pob-root-**"
       - "renovate/major-pob-root"
 
+permissions:
+  contents: write
+
 jobs:
   run-install-and-commit-modified-files:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          ssh-key: ${{ secrets.PUSH_DEPLOY_KEY }}
 
       - name: Enable Corepack
         run: corepack enable
