--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -45,7 +45,7 @@
     "clean": "yarn clean:build",
     "clean:build": "pob-esbuild-clean-out dist",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-app-console",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-app-console'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "browserslist": {
@@ -78,7 +78,7 @@
   },
   "prettier": "@pob/root/prettier-config",
   "dependencies": {
-    "@types/node": ">=24.10.4",
+    "@types/node": ">=22.0.0",
     "nightingale": "18.1.0"
   },
   "devDependencies": {
