--- a/packages/nightingale-markdown-formatter/package.json
+++ b/packages/nightingale-markdown-formatter/package.json
@@ -34,8 +34,8 @@
   "scripts": {
     "clean": "yarn clean:build",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-markdown-formatter",
-    "test": "yarn ../../ run test -- packages/nightingale-markdown-formatter",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-markdown-formatter'",
+    "test": "yarn '../..' run test -- 'packages/nightingale-markdown-formatter'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "pob": {},
