--- a/packages/nightingale-react-native-console/package.json
+++ b/packages/nightingale-react-native-console/package.json
@@ -43,7 +43,7 @@
     "clean": "yarn clean:build",
     "clean:build": "pob-esbuild-clean-out dist",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-react-native-console",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-react-native-console'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "browserslist": {
