--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "clean": "yarn clean:build",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-string",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-string'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "pob": {},
