--- a/packages/nightingale-web-processor/package.json
+++ b/packages/nightingale-web-processor/package.json
@@ -40,7 +40,7 @@
     "clean": "yarn clean:build",
     "clean:build": "pob-esbuild-clean-out dist",
     "lint": "yarn run lint:eslint",
-    "lint:eslint": "yarn ../.. run eslint --quiet packages/nightingale-web-processor",
+    "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-web-processor'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "pob": {
@@ -59,7 +59,7 @@
   },
   "prettier": "@pob/root/prettier-config",
   "dependencies": {
-    "@types/node": ">=24.10.4",
+    "@types/node": ">=22.0.0",
     "nightingale-types": "18.0.0"
   },
   "devDependencies": {
