--- a/packages/nightingale-app-react-native/package.json
+++ b/packages/nightingale-app-react-native/package.json
@@ -21,13 +21,22 @@
     "node": ">=22.18.0"
   },
   "sideEffects": false,
+  "main": "./dist/index-node22.mjs",
   "types": "./dist/definitions/index.d.ts",
+  "module": "./dist/index-browser.es.js",
+  "browser": "./dist/index-browser.es.js",
   "exports": {
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/definitions/index.d.ts",
       "react-native": {
         "import": "./dist/index-react-native.es.js"
+      },
+      "browser": {
+        "import": "./dist/index-browser.es.js"
+      },
+      "node": {
+        "import": "./dist/index-node22.mjs"
       }
     }
   },
@@ -44,6 +53,15 @@
     "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-app-react-native'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
+  "browserslist": {
+    "production": [
+      "defaults",
+      "> 0.2%",
+      "not ie < 12",
+      "not safari < 10",
+      "not ios_saf < 10"
+    ]
+  },
   "pob": {
     "bundler": "rollup-esbuild",
     "entries": [
@@ -52,6 +70,13 @@
     "envs": [
       {
         "target": "react-native"
+      },
+      {
+        "target": "browser"
+      },
+      {
+        "target": "node",
+        "version": "22"
       }
     ],
     "typescript": true
@@ -67,11 +92,11 @@
     }
   },
   "dependencies": {
-    "nightingale": "18.1.0",
-    "nightingale-react-native-console": "18.1.0"
+    "nightingale": "18.1.0"
   },
   "devDependencies": {
     "@pob/rollup-esbuild": "7.4.2",
+    "react-native": "0.83.1",
     "typescript": "5.9.3"
   }
 }
