--- a/packages/nightingale-react-native-console/package.json
+++ b/packages/nightingale-react-native-console/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nightingale-react-native-console",
   "version": "18.1.0",
-  "description": "React Native and Expo handler for nightingale",
+  "description": "Deprecated: React Native and Expo handler for nightingale",
   "keywords": [
     "nightingale",
     "nightingale-handler",
@@ -21,66 +21,31 @@
     "node": ">=22.18.0"
   },
   "sideEffects": false,
-  "types": "./dist/definitions/index.d.ts",
-  "module": "./dist/index-browser.es.js",
-  "browser": "./dist/index-browser.es.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/definitions/index.d.ts",
-      "browser": {
-        "import": "./dist/index-browser.es.js"
-      }
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
     }
   },
   "files": [
-    "src",
-    "dist"
+    "lib"
   ],
   "scripts": {
-    "build": "yarn clean:build && rollup --config rollup.config.mjs && yarn run build:definitions",
-    "build:definitions": "tsc -p tsconfig.json",
     "clean": "yarn clean:build",
-    "clean:build": "pob-esbuild-clean-out dist",
     "lint": "yarn run lint:eslint",
     "lint:eslint": "yarn '../..' run eslint --quiet 'packages/nightingale-react-native-console'",
+    "test": "yarn '../..' run test -- 'packages/nightingale-react-native-console'",
     "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
-  "browserslist": {
-    "production": [
-      "defaults",
-      "> 0.2%",
-      "not ie < 12",
-      "not safari < 10",
-      "not ios_saf < 10"
-    ]
-  },
-  "pob": {
-    "bundler": "rollup-esbuild",
-    "entries": [
-      "index"
-    ],
-    "envs": [
-      {
-        "target": "browser"
-      }
-    ],
-    "typescript": true
-  },
+  "pob": {},
   "prettier": "@pob/root/prettier-config",
   "peerDependencies": {
     "react-native": "*"
   },
   "dependencies": {
-    "nightingale": "18.1.0",
-    "nightingale-types": "18.0.0"
-  },
-  "devDependencies": {
-    "@pob/rollup-esbuild": "7.4.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-native": "0.83.1",
-    "react-native-web": "0.21.2",
-    "typescript": "5.9.3"
+    "nightingale-app-react-native": "18.1.0"
   }
 }
